--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   },
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-nodemon": "^0.4.0"
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-nodemon": "^0.4.0",
+    "grunt-sass": "^1.0.0",
+    "load-grunt-tasks": "^3.3.0"
   }
 }
