--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.5",
+    "documentdb": "^1.4.0",
     "express": "^4.13.3",
     "underscore": "^1.8.3"
   },
