--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "underscore": "~1.8.3",
     "jquery": "~2.1.4",
     "Chart.js": "~1.0.2",
-    "font-awesome": "fontawesome#~4.4.0"
+    "font-awesome": "fontawesome#~4.4.0",
+    "angular-animate": "~1.4.7"
   }
 }
