--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^3.0.3",
+    "grunt-bower-task": "^0.4.0",
+    "grunt-bump": "^0.6.0",
     "grunt-concurrent": "^2.0.3",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-uglify": "^0.9.2",
